Finished changing colors for the entire applciation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,10 @@
     <h1>Fantasy Football</h1>
 
     <!-- File input for uploading CSV -->
-    <input type="file" id="csvFile" accept=".csv">
+    <div class="file-input-container">
+        <label for="csvFile">Choose File</label>
+        <input type="file" id="csvFile" />
+    </div>
 
     <!-- Filter Tabs -->
     <div id="filterTabs"></div>
